--- a/Android Studio/Week1_0706012110021/app/src/main/res/values/colors.xml
+++ b/Android Studio/Week1_0706012110021/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF333333</color>
+    <color name="black_700">#FF333333</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange1">#FFCD5C04</color>
     <color name="orange2">#FFAA5A04</color>
